--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ebus",
-  "version": "0.2.0",
+  "version": "0.9.0",
   "description": "A simple, sequential event bus",
   "author": "Askabt (info@askabt.in)",
   "homepage": "http://scrollback.io",
@@ -22,7 +22,9 @@
   "engines": {
     "node": ">=0.8"
   },
-  "dependencies": {},
+  "dependencies": {
+	  "setimmediate": "x"
+  },
   "optionalDependencies": {},
   "devDependencies": {},
   "directories": {
